--- a/inst/rmarkdown/hr_report.qmd
+++ b/inst/rmarkdown/hr_report.qmd
@@ -320,7 +320,7 @@ check_hr_unit_status <- function() {
     mutate(n = n_distinct(unit_status)) |> 
     ungroup() |> 
     filter(n > 1) |> 
-    count(unit_abbr, unit_name, unit_status) |> 
+    count(school_name, unit_abbr, unit_name, unit_status) |> 
     arrange(unit_abbr, unit_status)
 }
 
