catch both Erratum and erratum

--- a/inst/rmarkdown/report-mods/mods.qmd
+++ b/inst/rmarkdown/report-mods/mods.qmd
@@ -296,8 +296,8 @@ import <-
 sids_erratum <-
   import |>
   filter(
-    grepl("erratum", subtypeDescription) |
-    grepl("erratum", `prism:aggregationType`)
+    grepl("[Ee]rratum", subtypeDescription) |
+    grepl("[Ee]rratum", `prism:aggregationType`)
   ) |>
   pull(`dc:identifier`)
 
